fix(learning): keep lesson and retrieval state immutable
Guided lesson catalogs and retrieval constraints now own detached immutable
state, preventing callers from mutating cached metadata or source scopes.

- Return deep lesson snapshots from the TOC provider
- Defensively copy retrieval source constraints
- Prove both boundaries reject external mutation